--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
     justify-content: flex-end;
     align-items: center;
     padding-right: 2em;
-    background-color: rebeccapurple;
+    height: 10vh;
 }
 
 #dropdown{
@@ -67,6 +67,7 @@
     border: 1px solid rgb(211, 211, 211);
     display: flex;
     justify-content: flex-start;
+    transition: 0.05s;
 }
 #magnifier {
     margin-left: 0.7em;
@@ -77,8 +78,74 @@
 #input-form > input {
     outline: none;
     border: none;
-    margin-left: 1em;
+    margin: 0 1em;
+    width: 100%;
+    background-color: white;
 }
+#input-form:hover {
+    box-shadow: 1.5px 1.5px 3px rgb(218, 218, 218);
+}
+.a1 {
+    text-decoration: none;
+    color: rgb(71, 71, 71);
+    background-color: rgb(241, 239, 239);;
+    padding: 1em;
+    margin: 0 0.5em;
+    border-radius: 0.3em;
+    font-size: 0.8rem;
+    transition: 0.1s;
+}
+.a1:hover {
+    background-color: rgb(231, 231, 231);;
+} 
+#container2 {
+    margin: 3em 0;
+}
+#container3 {
+    display: flex;
+    justify-content: center;
+    font-size: 0.8rem;
+    align-items: center;
+}
+#container3 > * {
+    padding: 0 0.5em;
+}
+.a2 {
+    text-decoration: none;
+    color: rgb(57, 17, 201);
+}
+.a2:hover {
+    text-decoration: underline;
+}
+main {
+    height: 56vh;
+}
+footer {
+    background-color: rgb(241, 239, 239);;
+    height: 18.5vh;
+    color: rgb(71, 71, 71);
+}
+#footer-line {
+    opacity: 25%;
+    margin: 0;
+}
+#location {
+    padding: 1em 2em;
+    align-self: center;
+}
+#container4 {
+    display: flex;
+    margin: 2em 0 2em 1em;
+}
+.afooter {
+    text-decoration: none;
+    padding: 0.5em 1em;
+    color: rgb(71, 71, 71);
+}
+.afooter:hover {
+    text-decoration: underline;
+}
+
 /*css reset*/
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
